--- a/index.html
+++ b/index.html
@@ -59,6 +59,16 @@
       <p>it's all run and compiled in the browser</p>
     </section>
 
+    <section>
+      <h2>What about npm?</h2>
+    </section>
+
+    <section>
+      <h2>Or gulp?</h2>
+    </section>
+
+    
+
   </article>
 
   <script>
