--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
   <article>
 
     <section>
-      <h1>JSPM</h1>
-      <p>the module loader / package manager</p>
+      <h1>JSPM: Battle of the Build</h1>
       <img class='avatar' src='https://avatars0.githubusercontent.com/u/710752?v=3&s=460'/>
       <a href='https://twitter.com/mshwery'>@mshwery</a>
+    </section>
+
+    <section data-bespoke-backdrop='brad-pitt'>
+      <h2>Get pumped, we're going to talk about tools.</h2>
     </section>
 
     <section>
       <blockquote cite='http://jspm.io/'>Frictionless browser package management</blockquote>
     </section>
+
+    <section data-bespoke-backdrop='eyebrows'></section>
 
     <section>
       <h2>
@@ -58,6 +63,8 @@
       <p>no build tool or task running required.<p>
       <p>it's all run and compiled in the browser</p>
     </section>
+
+    <section data-bespoke-backdrop='fascinating'></section>
 
     <section data-bespoke-backdrop='npm'>
     </section>
@@ -100,7 +107,9 @@ $(document).ready(function() {
       <pre class='language-bash'><code language='bash'>$ jspm bundle my-module public/bundle.js --inject</code></pre>
     </section>
 
-    <section>
+    <section data-bespoke-backdrop='friends-yay'></section>
+
+    <section data-bespoke-backdrop=''>
       <p>simple builds: npm scripts + jspm</p>
       <p>complex builds: npm scripts + jspm + gulp</p>
     </section>
